--- a/argocd/nginxdemo/nginxservice.yaml
+++ b/argocd/nginxdemo/nginxservice.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  app: nginx
+  labels:
+    app: nginx
 spec:
   selector:
     app: nginx
@@ -11,5 +12,3 @@ spec:
     protocol: TCP
     targetPort: 80
   type: NodePort
-
-
